--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "@sailshq/upgrade": "^1.0.9",
+    "async": "2.1.4",
     "bunyan": "^1.8.1",
     "captains-log": "^0.11.11",
     "ejs": "2.3.4",
@@ -24,8 +26,11 @@
     "lodash": "^3.8.0",
     "mssql": "^3.3.0",
     "rc": "^1.2.8",
-    "sails": "~0.12.14",
+    "sails": "^1.2.3",
     "sails-disk": "~0.10.9",
+    "sails-hook-grunt": "^1.0.8",
+    "sails-hook-orm": "^2.1.1",
+    "sails-hook-sockets": "^1.5.5",
     "sails-mssqlserver": "api/adapters/sails-mssqlserver",
     "skipper": "^0.8.7",
     "underscore.string": "^3.3.5",
