--- a/package.json
+++ b/package.json
@@ -7,32 +7,38 @@
   "dependencies": {
     "@sailshq/upgrade": "^1.0.9",
     "async": "2.1.4",
+    "bcrypt": "^3.0.7",
     "bunyan": "^1.8.1",
-    "captains-log": "^0.11.11",
+    "captains-log": "^2.0.3",
     "ejs": "2.3.4",
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
+    "grunt-contrib-coffee": "^2.1.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-jst": "1.0.0",
     "grunt-contrib-less": "1.3.0",
     "grunt-contrib-uglify": "1.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "^0.8.0",
-    "include-all": "^1.0.0",
-    "lodash": "^3.8.0",
+    "include-all": "^4.0.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mssql": "^3.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "rc": "^1.2.8",
     "sails": "^1.2.3",
     "sails-count-middleware": "^1.0.6",
-    "sails-disk": "~0.10.9",
-    "sails-hook-grunt": "^1.0.8",
+    "sails-disk": "^1.1.2",
+    "sails-hook-grunt": "^4.0.1",
     "sails-hook-orm": "^2.1.1",
-    "sails-hook-sockets": "^1.5.5",
-    "sails-mssqlserver": "api/adapters/sails-mssqlserver",
+    "sails-hook-sockets": "^2.0.0",
+    "sails-mssql-server": "file:./api/adapters/sails-mssql-server/",
+    "sails1-mssqlserver": "^1.0.1",
     "skipper": "^0.8.7",
     "underscore.string": "^3.3.5",
     "waterline-cursor": "0.0.7"
