--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "startTest": "NODE_ENV=test node app.js"
   },
   "main": "app.js",
   "repository": {
