--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,16 +3,15 @@ on: [push]
 name: Build_And_Deploy_Workflow
 
 jobs:
-  build:
+
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
+
       - name: "Checkout Github Action"
         uses: actions/checkout@master
       - run: docker build . -t chapadany.azurecr.io/point-of-sale-api:${{ github.sha }}
 
-  push:
-    needs: build
-    steps:
       - name: "Login via Azure CLI"
         uses: azure/login@v1
         with:
@@ -29,10 +28,14 @@ jobs:
       - name: Azure logout
         run: az logout
 
+
+
   deploy-test:
-    needs: push
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
     steps:
+
       - name: "Login via Azure CLI"
         uses: azure/login@v1
         with:
