--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,7 +12,7 @@ jobs:
       - name: "Login via Azure CLI"
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_TEST_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_PROD_CREDENTIALS }}
 
       - name: "Change webapp version"
         uses: azure/webapps-deploy@v2
